--- a/css/aqueous.css
+++ b/css/aqueous.css
@@ -15,7 +15,7 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 **/
 .aqueous{
-	font-family: 'arial,helvetica,sans-serif';
+	font-family: 'Droid Serif';
 }
 
 .aqueous-clear:after {
@@ -53,7 +53,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		float:left;
 		padding : 5px;
         font-size :12px;
-        font-family: 'arial,helvetica,sans-serif';
+        font-family: 'Droid Serif';
+        background-color : #fff;
 	}
 
 	.aqueous .aqueous-safe-line .aqueous-block.selected{
@@ -67,7 +68,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 	margin : 10px 0;
 	border: #ccc 1px solid;
 	display : block;
-    font-family: 'arial,helvetica,sans-serif';
+    font-family: 'Droid Serif';
 }
 	.aqueous-belt .aqueous-tool{
 		padding: 11px 12px 0 12px;
@@ -116,13 +117,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 	color: #777;
 	position : absolute;
 	display:none;
-    font-family: 'arial,helvetica,sans-serif';
+    font-family: 'Droid Serif';
 }
 
 	.aqueous-menu .aqueous-menu-title{
 		font-weight:bold;
 		padding : 5px 7px;
-        font-family: 'arial,helvetica,sans-serif';
+        font-family: 'Droid Serif';
 	}
 
 	.aqueous-menu a.aqueous-menu-item{
@@ -147,7 +148,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 	padding : 10px;
 	color: #777;
 	position : absolute;
-    font-family: 'arial,helvetica,sans-serif';
+    font-family: 'Droid Serif';
     display:none;
 }
 	
@@ -184,4 +185,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 .aqueous-button:hover{
 	color: #333;
+}
+
+/*Aqueous Tools Specific*/
+
+.aqueous-tool.color{
+    font-size: 18px;
+    padding-top: 7px;
+    font-family: 'Droid Serif';
+}
+
+.aqueous-tool.background-color .sp-dd{
+    line-height:10px;
 }
